# agenteval

experiments/agenteval/: Dockerfile.base  Dockerfile.fact_qa  Dockerfile.retail  PAPER5_AGENTEVAL_DRAFT.md  SEALED_TEST_SETS.json  baselines.py  calibration_samples.jsonl  calibration_samples_100.jsonl  create_calibration_samples.py  judge_calibration.py  pyproject.toml  requirements.txt  run_baselines.py  run_docker_eval.py  runner.py  seal_test_sets.py  verify.sh
experiments/agenteval/results/: BASELINE_SWEEP_16TASKS.jsonl  BASELINE_SWEEP_CONSOLIDATED.jsonl  baseline_sweep_180.jsonl  baseline_sweep_code_gen.jsonl  baseline_sweep_fact_qa.jsonl  baseline_sweep_retail.jsonl  baseline_sweep_summary.json  baseline_sweep_travel_planning.jsonl  baseline_sweep_web_shopping.jsonl  comprehensive_eval.jsonl  docker_eval_baselines.jsonl  docker_eval_results.jsonl  docker_eval_results_fixed.jsonl  docker_eval_results_full.jsonl  docker_eval_results_summary.json  final_eval.jsonl  full_baseline_results.jsonl  full_eval_fixed.jsonl  human_judge_spotcheck_input.jsonl  human_judge_spotcheck_results.jsonl  judge_calibration.jsonl  judge_calibration_nemotron_100.agreement.json  judge_calibration_nemotron_100.jsonl  judge_calibration_nemotron_100_complete.jsonl  judge_calibration_nemotron_only.jsonl  judge_calibration_results.agreement.json  judge_calibration_results.jsonl  quick_baselines.jsonl  results.jsonl  summary_ReAct-test.json
experiments/agenteval/results/baselines/: cot_results.json  plan_and_solve_results.json  random_results.json  react_results.json  reflexion_results.json  results.jsonl  summary.json
experiments/agenteval/results/baselines_all/: cot_results.json  plan_and_solve_results.json  random_results.json  react_results.json  reflexion_results.json  results.jsonl  summary.json
experiments/agenteval/sealed_tests/: MANIFEST.json  api_integration_01_challenge.jsonl  api_integration_01_test.jsonl  code_gen_01_api_usage_challenge.jsonl  code_gen_01_api_usage_test.jsonl  code_review_01_challenge.jsonl  code_review_01_test.jsonl  data_analysis_01_pandas_challenge.jsonl  data_analysis_01_pandas_test.jsonl  debugging_01_challenge.jsonl  debugging_01_test.jsonl  entity_extraction_01_challenge.jsonl  entity_extraction_01_test.jsonl  fact_qa_01_multi_hop_challenge.jsonl  fact_qa_01_multi_hop_test.jsonl  question_answering_01_challenge.jsonl  question_answering_01_test.jsonl  retail_01_substitution_challenge.jsonl  retail_01_substitution_test.jsonl  sentiment_analysis_01_challenge.jsonl  sentiment_analysis_01_test.jsonl  sql_generation_01_challenge.jsonl  sql_generation_01_test.jsonl  summarization_01_challenge.jsonl  summarization_01_test.jsonl  text_generation_01_challenge.jsonl  text_generation_01_test.jsonl  translation_01_challenge.jsonl  translation_01_test.jsonl  travel_planning_01_multi_constraint_challenge.jsonl  travel_planning_01_multi_constraint_test.jsonl  web_shopping_01_product_finding_challenge.jsonl  web_shopping_01_product_finding_test.jsonl
experiments/agenteval/tasks/api_integration/: Dockerfile  server.py  task.json  task.yaml
experiments/agenteval/tasks/core/: tasks.yaml
(+138 files in other folders)
