[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agenteval-travel-planning"
version = "0.1.0"
description = "Travel planning task for AgentEval"
requires-python = ">=3.10"
dependencies = [
    "ortools>=9.8.0",
    "requests>=2.31.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
]